--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans");
+
+.nameHeader {
+  border: "2px solid white";
+}
+
 .header {
   font-size: 80px;
   color: white;
@@ -10,11 +16,13 @@
   height: max-content;
   margin: auto;
   bottom: 70%;
+  font-family: "Lumanosimo", cursive;
+  border: "2px solid red";
 }
 .websites {
   text-align: center;
   position: absolute;
-  bottom: 500px;
+  bottom: 650px;
   left: 0;
   right: 0;
   height: max-content;
@@ -31,6 +39,24 @@
   width: 60px;
   filter: invert(100%);
   -webkit-filter: invert(100%);
+}
+.downArrow {
+  height: 60px;
+  width: 60px;
+  filter: invert(100%);
+  -webkit-filter: invert(100%);
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  height: max-content;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+  width: 60px;
+  position: "absolute";
 }
 
 .github:hover,
