--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,8 @@
 }
 .downArrow:hover {
   cursor: pointer;
+  filter: invert(0%);
+  -webkit-filter: invert(50%);
 }
 .myProjects {
   text-align: center;
@@ -97,14 +99,45 @@
 }
 
 .insideBox {
-  width: 70%;
+  display: flex;
+  width: 1260px;
   height: 70%;
-  background-color: white;
-
+  background-color: rgb(221, 221, 221);
+  flex-direction: row;
   left: 50%;
   top: 45%;
   position: absolute;
   transform: translate(-50%, -50%);
+  flex-wrap: wrap;
+}
+.box {
+  flex-basis: 75;
+  border: "black" 1;
+  height: 20;
+  margin: 10;
+  flex-direction: row;
+  position: relative;
+}
+.box div {
+  height: 530px;
+  width: 300px;
+  margin: 60px;
+  border: black 1px solid;
+  border-radius: 2%;
+  background-color: rgb(52, 3, 99);
+  border-bottom: 265px solid black;
+}
+.box text {
+  font-size: 50px;
+  color: #eee;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: fit-content;
+  margin: auto;
 }
 
 .myProjectsHeader {
@@ -117,4 +150,33 @@
 .myProjectsHeader h1 {
   color: white;
   font-family: "Lumanosimo", cursive;
+}
+.imageStyling {
+  display: flex;
+  width: 50%;
+}
+
+.imageStyling img {
+  height: 75%;
+  width: 45%;
+  left: 50%;
+  top: 45%;
+  border-radius: 5%;
+  border: 2px solid black;
+  transform: translate(20%, 20%);
+}
+
+.hex {
+  width: 200px;
+  color: aqua;
+  background-color: azure;
+  aspect-ratio: 1;
+  clip-path: polygon(
+    93.3% 75%,
+    50% 100%,
+    6.7% 75%,
+    6.7% 25%,
+    50% 0%,
+    93.3% 25%
+  );
 }
