--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans");
-
 .nameHeader {
   border: 2px solid white;
+}
+.background {
+  background-color: rgb(22, 19, 19);
+}
+.centre {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header {
@@ -14,15 +21,15 @@
   left: 0;
   right: 0;
   height: max-content;
-  margin: auto;
+  margin-top: 400px;
   bottom: 80%;
   font-family: "Futura", "Helvetica Neue", Helvetica, sans-serif;
-  border: "2px solid red";
+  text-shadow: 2px 0 black;
 }
 .websites {
   text-align: center;
   position: absolute;
-  bottom: 75%;
+  bottom: 35%;
   left: 0;
   right: 0;
   height: max-content;
@@ -35,6 +42,7 @@
 .github,
 .linkedin,
 .email {
+  position: absolute;
   height: 60px;
   width: 60px;
   filter: grayscale(100%) invert(100%);
@@ -49,7 +57,7 @@
 .downArrow {
   width: 60px;
   height: 60px;
-  filter: invert(100%);
+  filter: invert(0%);
   -webkit-filter: invert(100%);
   text-align: center;
   position: absolute;
@@ -57,9 +65,7 @@
   left: 0;
   right: 0;
   margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
   transition: filter 0.3s ease-in-out, transform 0.2s ease-in-out;
   cursor: pointer;
 }
@@ -90,90 +96,6 @@
   cursor: pointer;
 }
 
-.carousel-item {
-  height: 94vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.white-box {
-  flex: 1;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(22, 19, 19);
-}
-
-.insideBox {
-  display: flex;
-  width: 1260px;
-  height: 70%;
-  background-color: rgb(221, 221, 221);
-  flex-direction: row;
-  left: 50%;
-  top: 45%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  flex-wrap: wrap;
-}
-.centeringEverything {
-  display: flex;
-}
-.box {
-  flex-basis: 75;
-  border: "black" 1;
-  height: 20;
-  margin: 10;
-  flex-direction: row;
-  position: relative;
-}
-.box div {
-  height: 530px;
-  width: 300px;
-  margin: 60px;
-  border: black 1px solid;
-  border-radius: 2%;
-}
-.box-purple div {
-  background-color: rgb(91, 51, 129);
-  border-bottom: 265px solid black;
-}
-
-.box-red div {
-  background-color: rgb(129, 51, 51);
-  border-bottom: 265px solid black;
-}
-
-.box-blue div {
-  background-color: rgb(51, 82, 129);
-  border-bottom: 265px solid black;
-}
-.box-green div {
-  background-color: rgb(60, 129, 51);
-  border-bottom: 265px solid black;
-}
-.box-pink div {
-  background-color: rgb(129, 51, 116);
-  border-bottom: 265px solid black;
-}
-.box-orange div {
-  background-color: rgb(129, 108, 51);
-  border-bottom: 265px solid black;
-}
-
-.box text {
-  font-size: 45px;
-  color: black;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: fit-content;
-  margin: auto;
-}
-
 .myProjectsHeader {
   flex: 0.2;
   background-color: rgb(22, 19, 19);
@@ -184,38 +106,6 @@
 .myProjectsHeader h1 {
   color: white;
   font-family: "Lumanosimo", cursive;
-}
-.imageStyling {
-  display: flex;
-  width: 50%;
-}
-
-.imageStyling img {
-  height: 75%;
-  width: 45%;
-  left: 50%;
-  top: 45%;
-  border-radius: 5%;
-  border: 2px solid black;
-  transform: translate(20%, 20%);
-}
-
-.diamond {
-  height: 500px;
-  width: 250px;
-  text-align: center;
-  position: absolute;
-  top: 0px;
-  bottom: 5px;
-  left: 0;
-  right: 0;
-  height: max-content;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  resize: "stretch";
-  transform: rotate(30deg);
-  cursor: pointer;
 }
 
 .popup-box {
@@ -228,17 +118,17 @@
   z-index: 2;
 }
 
-.boxas {
+.box {
   position: relative;
   width: 70%;
   margin: 0 auto;
   height: auto;
   max-height: 7 0vh;
-  margin-top: calc(100vh - 97vh - 20px);
+  margin-top: calc(115vh - 97vh - 20px);
   background: #fff;
-  border-radius: 4px;
+  border-radius: 10px;
   padding: 20px;
-  border: 1px solid #fffcfc;
+  border: 10px solid rgb(22, 19, 19);
   overflow: auto;
 }
 
@@ -247,7 +137,7 @@
   cursor: pointer;
   position: fixed;
   right: calc(15% - 30px);
-  top: calc(100vh - 97vh - 33px);
+  top: calc(115vh - 97vh - 33px);
   background: #ededed;
   width: 25px;
   height: 25px;
@@ -258,16 +148,12 @@
   font-size: 20px;
 }
 
-.changeSize {
-  transition: transform 0.5s ease;
-}
-
-.hovered {
-  transform: scale(0.6);
-}
 .dependency {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   display: inline-block;
-  margin: 10px;
+  margin: 30px;
   padding: 10px;
   border: 2px solid #333;
   border-radius: 8px;
@@ -294,6 +180,9 @@
   padding: 100px 0;
   background-color: #f5f5f5;
   text-align: center;
+  margin: 100px;
+  border-radius: 50px;
+  border: 5px solid #fdd10e;
 }
 
 .about-container {
@@ -302,12 +191,12 @@
   justify-content: space-between;
   max-width: 1200px;
   margin: 0 auto;
+  background-color: #f5f5f5;
 }
 
 .about-content {
   flex: 1;
   padding-right: 40px;
-  text-align: left;
 }
 
 .about-content h2 {
@@ -342,7 +231,7 @@
   display: inline-block;
   padding: 12px 24px;
   background-color: #000000;
-  color: #ffffff;
+  color: white;
   text-decoration: none;
   border: none;
   border-radius: 25px;
@@ -353,11 +242,74 @@
 }
 
 .CVButton:hover {
-  background-color: #ffffff;
+  background-color: #fdd10e;
   transform: scale(1.05);
   color: #000000;
 }
 
 .CVButton:focus {
   outline: none;
+}
+
+.projectContainer {
+  background-color: rgb(22, 19, 19);
+  padding: 40px; /* Add padding for spacing */
+}
+
+.project-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(calc(50% - 10px), 1fr));
+  gap: 20px;
+  background-color: rgb(22, 19, 19);
+}
+
+.project-section {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  box-shadow: 0px 2px 6px rgb(22, 19, 19);
+  justify-content: space-between;
+  background-color: #252525; /* Adjust background color */
+  border-radius: 8px;
+}
+
+.project-image-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px; /* Add margin at the bottom */
+}
+
+.project-image {
+  width: 100%; /* Make sure the image takes the full width */
+  max-height: 400px; /* Limit the image height */
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.project-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.project-button {
+  padding: 10px 20px;
+  background-color: transparent;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.project-button:hover {
+  background-color: #000000;
+  color: #ffffff;
 }
